# mini-project-3

./: .flaskenv  .gitignore  README.md  pyproject.toml
backend/: app.py
backend/database/: sample_data.py
backend/models/: book.py  customer.py  loan.py
backend/schemas/: book_schema.py  customer_schema.py  loan_schema.py
backend/utils/: custom_json_provider.py  json_serializable_model.py  library_card_number_generator.py
backend/views/: book_endpoints.py  customer_endpoints.py  loan_endpoints.py
frontend/: index.html
frontend/assets/: index-7d574aa6.js  index-fcd4f3e6.css
